# bible_cli

./: .gitignore  CMakeLists.txt
include/: bible_database.h  database.h  menu.h  utils.h
src/: database.cpp  main.cpp  menu.cpp  temp.cpp  utils.cpp
